# notare

./: .gitignore  .oxlintrc.json  Cargo.toml  LICENSE  README.md  SECURITY.md  Taskfile.yaml  bitrise.yml  dprint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
apps/cli/: Cargo.toml  build.rs
apps/cli/npm/: install.js  package.json
apps/cli/src/: app.rs  cli.rs  db.rs  entry.rs  entry_ui.rs  error.rs  fmt.rs  interaction_debug.rs  main.rs  mcp.rs  output.rs  theme.rs  ui.rs  update_check.rs
apps/cli/tests/: pty.rs
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.conf.citest.json  tauri.conf.flatpak.json  tauri.conf.json  tauri.conf.stable-macos.json  tauri.conf.stable.json  tauri.conf.staging.json
apps/stt-server/: Cargo.toml  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.vulkan  README.md
apps/stt-server/src/: assets.rs  auth.rs  config.rs  health.rs  lib.rs  main.rs  probe.rs  router.rs  state.rs
crates/activity-capture-dev/: Cargo.toml  README.md
crates/activity-capture-dev/src/: app.rs  display.rs  event_row.rs  export.rs  formatting.rs  main.rs  options.rs  styles.rs  theme.rs  ui.rs  vlm.rs
crates/activity-capture-macos/: Cargo.toml
crates/activity-capture-macos/src/: app_profile.rs  apple_script.rs  ax.rs  browser_url.rs  frontmost.rs  handlers.rs  lib.rs  platform.rs  runtime.rs  sanitize.rs  slack.rs  spotify.rs
crates/activity-capture-windows/: Cargo.toml
crates/activity-capture-windows/src/: capture.rs  com.rs  lib.rs  session.rs
crates/calendar/: Cargo.toml
crates/calendar/src/: convert.rs  error.rs  fetch.rs  lib.rs
crates/db-app/: Cargo.toml  SPEC.md
crates/db-app/migrations/: 20260318000000_initial.sql  20260318000003_words.sql  20260318000004_speaker_hints.sql  20260318000005_humans.sql  20260318000006_organizations.sql  20260318000007_session_participants.sql  20260318000008_notes.sql  20260318000009_connections.sql  20260318000015_events.sql  20260318000017_timeline_view.sql  20260318000019_daily.sql  20260318000020_tasks.sql  20260318000021_task_notes.sql  20260318000022_task_events.sql  20260318000023_meeting_artifacts.sql  20260318000024_task_participants.sql  20260318000025_task_transcripts.sql  20260319000000_session_event_id.sql  20260716120000_dictation_history.sql  20260720151807_voice_profiles.sql  20260723120000_embedding_chunks.sql  20260723130000_action_items_v2.sql
crates/db-app/src/: daily_ops.rs  daily_types.rs  events_ops.rs  events_types.rs  humans_ops.rs  lib.rs  meeting_artifacts_ops.rs  meeting_artifacts_types.rs  schema.sql  session_participants_ops.rs  sessions_ops.rs  sessions_types.rs  task_events_ops.rs  task_events_types.rs  task_notes_ops.rs  task_notes_types.rs  task_participants_ops.rs  task_participants_types.rs  tasks_ops.rs  tasks_types.rs  transcript_ops.rs  visibility_ops.rs  voice_profile_ops.rs
crates/db-core2/: Cargo.toml
crates/db-core2/src/: cloudsync.rs  lib.rs
crates/google-oauth/: Cargo.toml
crates/google-oauth/src/: client_json.rs  error.rs  flow.rs  lib.rs  token.rs
crates/ics-calendar/: Cargo.toml
crates/ics-calendar/src/: expand.rs  lib.rs  parse.rs  store.rs
crates/parakeet-onnx/: Cargo.toml
crates/parakeet-onnx/src/: lib.rs  model.rs
crates/parakeet-onnx/tests/: real_model.rs
crates/s3/: Cargo.toml
crates/shortcut-macos/: Cargo.toml
crates/shortcut-macos/examples/: manual.rs
crates/shortcut-macos/src/: hotkey.rs  lib.rs  permission.rs  service.rs
crates/text-embedding/: Cargo.toml  README.md
crates/text-embedding/scripts/: gen_reference_fixtures.py
crates/text-embedding/src/: lib.rs  manifest.rs
crates/text-embedding/tests/: correctness.rs
crates/transcribe-core/: Cargo.toml
crates/transcribe-core/src/: activity.rs  audio.rs  engine.rs  error.rs  lib.rs  origin.rs  transport.rs
crates/transcribe-voxtral-llama/: Cargo.toml
crates/transcribe-voxtral-llama/src/: lib.rs  model.rs
crates/transcribe-voxtral-llama/tests/: real_model.rs
crates/transcribe-whisper-local/: Cargo.toml
crates/transcribe-whisper-local/examples/: serve.rs
crates/transcribe-whisper-local/src/: engine.rs  lib.rs
crates/voxtral-llama-model/: Cargo.toml
crates/voxtral-llama-model/src/: lib.rs
plugins/activity-capture/: Cargo.toml  build.rs  package.json
plugins/activity-capture/js/: bindings.gen.ts
plugins/activity-capture/permissions/: default.toml
plugins/activity-capture/src/: analysis.rs  commands.rs  error.rs  events.rs  ext.rs  lib.rs  runtime.rs
plugins/bedrock/: Cargo.toml
plugins/calendar/: Cargo.toml  build.rs
plugins/calendar/js/: bindings.gen.ts
plugins/calendar/permissions/: default.toml
plugins/calendar/src/: commands.rs  ext.rs  google.rs  ics.rs  lib.rs
plugins/db/: AGENTS.md  Cargo.toml  build.rs  package.json
plugins/db/js/: bindings.gen.ts  index.ts
plugins/db/permissions/: default.toml
plugins/db/src/: commands.rs  error.rs  lib.rs  runtime.rs
plugins/dictation/: Cargo.toml  build.rs  package.json
plugins/dictation/js/: bindings.gen.ts
plugins/dictation/permissions/: default.toml
plugins/dictation/src/: clean.rs  commands.rs  error.rs  events.rs  ext.rs  inject.rs  lib.rs  orb.rs  session.rs
plugins/embedding-search/: Cargo.toml  build.rs  package.json
plugins/embedding-search/js/: bindings.gen.ts
plugins/embedding-search/permissions/: default.toml
plugins/embedding-search/src/: commands.rs  error.rs  lib.rs  runtime.rs
plugins/embedding-search/tests/: end_to_end.rs
plugins/local-stt/: Cargo.toml
plugins/local-stt/js/: bindings.gen.ts
plugins/local-stt/src/: commands.rs  ext.rs  lib.rs  model.rs
plugins/local-stt/tests/: voxtral_live_smoke.rs
plugins/shortcut/: Cargo.toml  build.rs
plugins/shortcut/js/: bindings.gen.ts
plugins/shortcut/permissions/: default.toml
plugins/shortcut/src/: commands.rs  error.rs  events.rs  ext.rs  handler.rs  lib.rs
plugins/todo/: Cargo.toml  build.rs  package.json
plugins/todo/js/: bindings.gen.ts
plugins/todo/permissions/: default.toml
plugins/webhook/: Cargo.toml  build.rs
(+1832 files in other folders)
