[package]
name = "activity-capture-macos"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-core = { workspace = true }
hypr-activity-capture-interface = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { workspace = true }
objc2 = { workspace = true }
objc2-app-kit = { workspace = true, features = ["NSWorkspace", "NSRunningApplication"] }
objc2-application-services = { workspace = true }
objc2-core-foundation = { workspace = true }
objc2-foundation = { workspace = true, features = ["NSArray", "NSDictionary", "NSNotification", "NSOperation", "NSString", "NSAppleScript", "NSAppleEventDescriptor"] }
