[package]
name = "activity-capture-windows"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-activity-capture-interface = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
sysinfo = { workspace = true }
windows = { workspace = true, features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_WindowsAndMessaging"] }
