[package]
name = "ics-calendar"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
ical = { version = "0.11", default-features = false, features = ["ical"] }
rrule = "0.14"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
