[package]
name = "text-embedding"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-onnx = { workspace = true }

serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
