[package]
name = "transcribe-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-audio-chunking = { workspace = true }
hypr-audio-interface = { workspace = true }
hypr-audio-utils = { workspace = true }
hypr-language = { workspace = true }
hypr-model-manager = { workspace = true }
hypr-ws-utils = { workspace = true }
owhisper-interface = { workspace = true }

bytes = { workspace = true }
serde_html_form = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
rodio = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
