[package]
name = "transcribe-whisper-local"
version = "0.1.0"
edition = "2024"

[features]
default = []
coreml = ["hypr-whisper-local/coreml"]
directml = ["hypr-pyannote-local/directml"]
cuda = ["hypr-whisper-local/cuda"]
hipblas = ["hypr-whisper-local/hipblas"]
openblas = ["hypr-whisper-local/openblas"]
metal = ["hypr-whisper-local/metal"]
vulkan = ["hypr-whisper-local/vulkan"]
openmp = ["hypr-whisper-local/openmp"]

[dev-dependencies]
bytes = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
hypr-audio-utils = { workspace = true }
hypr-data = { workspace = true }
owhisper-client = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
rodio = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

axum = { workspace = true, features = ["ws"] }

[dependencies]
hypr-language = { workspace = true, features = ["whisper"] }
hypr-model-manager = { workspace = true }
# Feature passthrough only (directml); not used directly by this crate.
hypr-pyannote-local = { workspace = true }
hypr-transcribe-core = { workspace = true }
hypr-whisper = { workspace = true }
hypr-whisper-local = { workspace = true }
owhisper-interface = { workspace = true }
