[package]
name = "voxtral-llama-model"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-language = { workspace = true }

serde = { workspace = true }
specta = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }
