[package]
name = "tauri-plugin-activity-capture"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-activity-capture"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }
tauri-plugin-activity-capture = { path = "." }

[dependencies]
hypr-activity-capture = { workspace = true, features = ["specta"] }
hypr-screen-core = { workspace = true }
tauri = { workspace = true, features = ["specta", "test"] }
tauri-plugin-local-llm = { workspace = true }

specta = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
