[package]
name = "tauri-plugin-bedrock"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-bedrock"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dependencies]
aws-config = "1.8"
# default-features disabled to drop the legacy `rustls` feature (aws-smithy-runtime/tls-rustls
# -> aws-smithy-http-client/legacy-rustls-ring -> rustls 0.21 + rustls-webpki 0.101.7, a HIGH
# advisory). Modern TLS is retained via `default-https-client` (rustls 0.23 + aws-lc-rs, already
# in-tree via aws-config). Remaining features mirror the crate's default set minus `rustls`.
aws-sdk-bedrock = { version = "1.127", default-features = false, features = ["default-https-client", "rt-tokio"] }

tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }
tokio = { workspace = true }

serde = { workspace = true }
specta = { workspace = true }

thiserror = { workspace = true }
