[package]
name = "tauri-plugin-calendar"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-calendar"
description = ""

[dependencies]
hypr-calendar = { workspace = true, features = ["specta"] }
hypr-calendar-interface = { workspace = true }
hypr-google-oauth = { workspace = true }
# Not in [workspace.dependencies] yet (root Cargo.toml is owned by another
# track); direct path dep until an `hypr-ics-calendar` entry lands there.
hypr-ics-calendar = { path = "../../crates/ics-calendar", package = "ics-calendar" }

tauri = { workspace = true, features = ["test"] }
tauri-plugin-auth = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-permissions = { workspace = true }
tauri-plugin-store2 = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }
