[package]
name = "tauri-plugin-dictation"
version = "0.1.0"
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-dictation"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
serde = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

tauri-plugin-shortcut = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
hypr-dictation-ui-macos = { workspace = true }

# Windows/Linux dictation-orb path: mic -> local STT websocket -> text
# injection into the focused app. macOS keeps its native panel and is not
# affected by any of these.
[target.'cfg(not(target_os = "macos"))'.dependencies]
arboard = { workspace = true }
bytes = { workspace = true }
enigo = { workspace = true }
futures-util = { workspace = true }
hypr-audio = { workspace = true }
hypr-audio-utils = { workspace = true }
owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-stream = { workspace = true }
