[package]
name = "tauri-plugin-dictation"
version = "0.1.0"
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-dictation"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
serde_json = { workspace = true }
specta-typescript = { workspace = true }

[dependencies]
serde = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

tauri-plugin-shortcut = { workspace = true }

# The dictation-orb path: mic -> local STT websocket -> text injection into
# the focused app. Available on every platform since #31 - macOS reaches
# parity through this same webview orb instead of its unfinished native
# panel (`hypr-dictation-ui-macos` below, kept for the `Handler` type but no
# longer wired to anything live).
arboard = { workspace = true }
bytes = { workspace = true }
tauri-plugin-store2 = { workspace = true }
enigo = { workspace = true }
futures-util = { workspace = true }
hypr-audio = { workspace = true }
hypr-audio-utils = { workspace = true }
owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-stream = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
hypr-dictation-ui-macos = { workspace = true }
