[package]
name = "tauri-plugin-shortcut"
version = "0.1.0"
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-shortcut"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
serde = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

# Toggle-style global hotkey (`register_global`/`unregister_global`), used on
# every platform for the dictation-orb shortcut.
tauri-plugin-global-shortcut = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Native push-to-talk event-tap hotkey path (`register`/`unregister`). Kept
# for the macOS-only `Handler::register` API; not wired to any frontend
# command today (see plugins/dictation - the dictation orb uses the toggle
# path above on every platform since #31).
hypr-shortcut-macos = { workspace = true }
