[package]
name = "tauri-plugin-webhook"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-webhook"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }

[dependencies]
specta = { workspace = true, features = ["derive", "serde_json"] }
tauri = { workspace = true, features = ["test", "macos-private-api"] }
tauri-plugin-store2 = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }

chrono = { workspace = true }
hex = "0.4"
hmac = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

utoipa = { version = "5.4.0" }
